@@ -99,9 +99,9 @@ void AGE_Frame::OnTerrainBordersTimer(wxTimerEvent &event)
         genie::Color high = (*pal50500)[(uint8_t)BorderPointer->Colors[0]];
         genie::Color med = (*pal50500)[(uint8_t)BorderPointer->Colors[1]];
         genie::Color low = (*pal50500)[(uint8_t)BorderPointer->Colors[2]];
-        Borders_Colors[0]->SetBackgroundColour(wxColour(high.r, high.g, high.b));
-        Borders_Colors[1]->SetBackgroundColour(wxColour(med.r, med.g, med.b));
-        Borders_Colors[2]->SetBackgroundColour(wxColour(low.r, low.g, low.b));
+        Borders_Colors[0]->SetForegroundColour(wxColour(high.r, high.g, high.b));
+        Borders_Colors[1]->SetForegroundColour(wxColour(med.r, med.g, med.b));
+        Borders_Colors[2]->SetForegroundColour(wxColour(low.r, low.g, low.b));
     }
 	ListTerrainBorderFrames();
 }
